I fixed the weird alignement in the nav bar, and I think that about wraps up the  full functionality of the site.  there wil be some style changes, and likely some big changes to certain aspects of the site, but this is a completely working, workable, classified-ad type website that will run on GAE.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -44,6 +44,17 @@ input, select {
     width:50%;
 }
 
+.pull-right{
+    margin-top: 10px;
+}
+.pull-right a{
+    color: #999;
+    margin-right:4px;
+}
+.pull-right a:hover{
+    color: #fff;
+    text-decoration:none;
+}
 
 
 
